List recipe ingredients

--- a/dishes/cinnamon_rolls.html
+++ b/dishes/cinnamon_rolls.html
@@ -29,5 +29,32 @@
          of the cinnamon rolls, making them even more irresistible. These warm and 
          comforting cinnamon rolls are perfect for breakfast or dessert and are sure 
          to please anyone who tries them.</p>
+    <p>For the dough:</p>     
+    <ul>
+        <li>4 cups all-purpose flour</li>
+        <li>1/3 cup granulated sugar</li>
+        <li>2 1/4 tsp active dry yeast</li>
+        <li>1 tsp salt</li>
+        <li>1/2 cup unsalted butter, melted</li>
+        <li>1 cup milk</li>
+        <li>2 large eggs, at room temperature</li>
+    </ul>
+    <p>For the cinnamon filling:</p>     
+    <ul>
+        <li>1 cup light brown sugar, packed</li>
+        <li>2 1/2 tbsp ground cinnamon</li>
+        <li>1/2 cup unsalted butter, softened</li>
+    </ul>        
+    <p>For the cream cheese frosting:</p>     
+    <ul>
+        <li>4 oz cream cheese, softened</li>
+        <li>1/4 cup unsalted butter, softened</li>
+        <li>2 cups powdered sugar</li>
+        <li>1 tsp vanilla extract</li>
+        <li>2-3 tbsp milk</li>
+    </ul> 
+    <p>Note: These quantities are for a standard recipe that yields about 12 cinnamon
+        rolls. Adjust the quantities based on how many rolls you want to make.</p>
+
 </body>
 </html>
