List recipe steps

--- a/dishes/cinnamon_rolls.html
+++ b/dishes/cinnamon_rolls.html
@@ -29,6 +29,7 @@
          of the cinnamon rolls, making them even more irresistible. These warm and 
          comforting cinnamon rolls are perfect for breakfast or dessert and are sure 
          to please anyone who tries them.</p>
+    <h2>Ingredients</h2>     
     <p>For the dough:</p>     
     <ul>
         <li>4 cups all-purpose flour</li>
@@ -55,6 +56,28 @@
     </ul> 
     <p>Note: These quantities are for a standard recipe that yields about 12 cinnamon
         rolls. Adjust the quantities based on how many rolls you want to make.</p>
+    <h2>Steps</h2>
+    <ol>
+        <li>In a large mixing bowl, combine the flour, sugar, yeast, and salt. Mix until 
+            evenly distributed.</li>
+        <li>Add the melted butter, warmed milk, and eggs to the bowl. Mix with a wooden spoon 
+            until a sticky dough forms.</li>
+        <li>Dust a clean surface with flour and transfer the dough to it. Knead the dough for 
+            about 10 minutes, or until it becomes smooth and elastic.</li>
+        <li>Place the dough in a greased bowl and cover it with a clean cloth. Allow it to rise
+             for 1-2 hours, or until it doubles in size.</li>
+        <li>Preheat the oven to 350°F (180°C). Grease a 9x13 inch baking dish.</li>
+        <li>Roll out the dough into a large rectangle, about 1/4 inch thick and spread the 
+            softened butter evenly over the dough, leaving a 1-inch border aroundthe edges.</li>
+        <li>In a small bowl, mix the brown sugar and cinnamon for the filling and sprinkle the brown sugar-cinnamon mixture over the buttered dough.</li>
+        <li>Roll the dough tightly into a log, starting at the long edge closest to you, and cut into 12 even slices.</li>
+        <li>Place the cinnamon rolls in the greased baking dish, cover the baking dish with a clean cloth and let the rolls rise for 30-45 minutes, or until they've doubled in size.</li> 
+        <li>Bake the cinnamon rolls in the preheated oven for 25-30 minutes, or until they're golden brown and puffy.</li>
+        <li>While the cinnamon rolls are baking, make the cream cheese frosting.</li>
+        <li>When the cinnamon rolls are done, remove them from the oven and let them cool for a few minutes.</li> 
+        <li>Drizzle the cream cheese frosting over the warm cinnamon rolls.</li>
+        <li>Serve the cinnamon rolls warm and enjoy!</li>
+    </ol>
 
 </body>
 </html>
